# docker

./: .dockerignore  .gitignore  DEPLOYMENT.md  DOCKER_BUILD.md  Dockerfile  README.md  add-sample-data.py  config.py  docker-compose.prod.yml  docker-compose.yml  docker-init.py  init_db.py  pyproject.toml  requirements.txt  reset_database.py
app/: __init__.py  redis_client.py
app/models/: __init__.py
app/routes/: admin.py  auth.py  main.py
app/static/css/: style.css
app/templates/: base.html  cart.html  index.html  login.html  orders.html  product.html  register.html
app/templates/admin/: add_product.html  dashboard.html  edit_product.html
instance/: id_cache.db  id_cache.db-shm  id_cache.db-wal
scripts/: Makefile  README.md  docker-start.bat  docker-start.sh  quick-start.py
